[FIX] Admin box legacy icons (images) were positioned too high.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/14.x@54523 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -2736,6 +2736,9 @@ img.pref_dependency {
 .adminanchors .nav li {
   display: inline-block;
 }
+.admbox .icon img {
+  margin-top: 18px;
+}
 .meta-col1 {
   text-align: right;
   font-weight: bold;
