--- a/themes/base_files/less/tiki-admin.less
+++ b/themes/base_files/less/tiki-admin.less
@@ -7,6 +7,11 @@
   }
 }
 
+// Font icons are vertically centered ok, but the .pngs were too high.
+.admbox .icon img {
+  margin-top: 18px;
+}
+
 // Metadata dialog box
 .meta-col1 {
   text-align: right;
